<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QTH Locator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="geoCoord">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="locator">Locator</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
</resources>
